--- a/app/views/users/credits.scala.html
+++ b/app/views/users/credits.scala.html
@@ -33,10 +33,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                             <a href="/user/2/baobei?t=love">  返利成功的宝贝 </a>
                         </h2>
                     </div>
+                    <div class="credits-time">2013-04-16</div>
                     <div class="credits-list">
-
-
-                            <div class="credits-item clearfix">
+                    <div class="credits-item clearfix">
 
                                 <div class="credits-detail">
                                     <div class="con">
@@ -61,13 +60,15 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                                     </div>
                                                 </dd>
 
-                                                <dd>返利:&nbsp;<span> 2100</span>&nbsp;<a href="/jifenbao">个集分宝</a>，值<span>21.0</span>元返利比例:<span>10.5</span>%</dd>
+                                                <dd>返利:&nbsp;<span> 2100</span>&nbsp;<a href="/jifenbao">个集分宝</a>，值<span>21.0</span>元，返利比例:<span>10.5</span>%</dd>
 
 
 
                                             </dl>
                                             <div class="time">
-                                                跟踪时间:2013-09-04
+                                              <p>跟踪时间:2013-09-04</p>
+                                                <p>状态:已完成</p>
+                                                <p>返利:<span> 2100</span>个集分宝</p>
                                             </div>
 
                                         </div>
@@ -75,10 +76,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                     </div>
                                 </div>
                             </div>
-
-
-
-
+                    </div>
                         <div class="clearfix pt20 pb20">
                             <div class="pagin fr pagination" id="J_Pagination">
                                 <span class="current">1</span>
@@ -89,102 +87,81 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                 <a title="下一页" href="" class="next">下一页</a>
                             </div>
                         </div>
-                    </div>
+
                 </div>
               </div>
 
                 <div class="user-side">
                     <div class="interest box-shadow plr15 ss">
-                        <div class="title">做多浏览的宝贝 </div>
-                        <ul class="interPer" id="J_InterPer">
+                        <div class="title">浏览最多的宝贝 </div>
+                        <ul class="interGoods" id="J_InterGoods">
 
                             <li>
-                                <div class="user-pic">
+                                <div class="goods-pic">
                                     <a href="/user/3" title="duanyu200888" target="_blank">
-                                        <img src="/images/user/default.jpg" width="50" height="50" alt="duanyu200888" title="duanyu200888"></a>
+                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
                                 </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/3" title="duanyu200888"><em class="ofh">duanyu200888</em> </a>
+                                <div class="goods-info">
+                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
 
-                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="duanyu200888" data-followtype="5" data-userid="3">加关注</a></div>
+                                    <p>价格：￥<span>200</span></p>
+                                    <p>返利：<span>200</span>个集分宝</p>
+                                    <p>返利比例:<span>10.5%</span></p>
+                                </div>
                             </li>
-
                             <li>
-                                <div class="user-pic">
-                                    <a href="/user/4" title="食美特" target="_blank">
-                                        <img src="http://tp4.sinaimg.cn/1283431903/50/22817194445/1" width="50" height="50" alt="食美特" title="食美特"></a>
+                                <div class="goods-pic">
+                                    <a href="/user/3" title="duanyu200888" target="_blank">
+                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
                                 </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/4" title="食美特"><em class="ofh">食美特</em> </a>
+                                <div class="goods-info">
+                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
 
-                                    <p>来自新浪微博</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="食美特" data-followtype="5" data-userid="4">加关注</a></div>
+                                    <p>价格：￥<span>200</span></p>
+                                    <p>返利：<span>200</span>个集分宝</p>
+                                    <p>返利比例:<span>10.5%</span></p>
+                                </div>
                             </li>
-
                             <li>
-                                <div class="user-pic">
-                                    <a href="/user/7" title="残缺的翅膀 " target="_blank">
-                                        <img src="http://qzapp.qlogo.cn/qzapp/100344510/9607B9C8276EEAA331DB668E28E66D51/50" width="50" height="50" alt="残缺的翅膀 " title="残缺的翅膀 "></a>
+                                <div class="goods-pic">
+                                    <a href="/user/3" title="duanyu200888" target="_blank">
+                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
                                 </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/7" title="残缺的翅膀 "><em class="ofh">残缺的翅膀 </em> </a>
+                                <div class="goods-info">
+                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
 
-                                    <p>来自腾讯QQ</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="残缺的翅膀 " data-followtype="5" data-userid="7">加关注</a></div>
+                                    <p>价格：￥<span>200</span></p>
+                                    <p>返利：<span>200</span>个集分宝</p>
+                                    <p>返利比例:<span>10.5%</span></p>
+                                </div>
                             </li>
-
                             <li>
-                                <div class="user-pic">
-                                    <a href="/user/8" title="793869346" target="_blank">
-                                        <img src="/images/user/default.jpg" width="50" height="50" alt="793869346" title="793869346"></a>
+                                <div class="goods-pic">
+                                    <a href="/user/3" title="duanyu200888" target="_blank">
+                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
                                 </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/8" title="793869346"><em class="ofh">793869346</em> </a>
+                                <div class="goods-info">
+                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
 
-                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="793869346" data-followtype="5" data-userid="8">加关注</a></div>
+                                    <p>价格：￥<span>200</span></p>
+                                    <p>返利：<span>200</span>个集分宝</p>
+                                    <p>返利比例:<span>10.5%</span></p>
+                                </div>
                             </li>
-
                             <li>
-                                <div class="user-pic">
-                                    <a href="/user/11" title="ktluxing" target="_blank">
-                                        <img src="/images/user/default.jpg" width="50" height="50" alt="ktluxing" title="ktluxing"></a>
+                                <div class="goods-pic">
+                                    <a href="/user/3" title="duanyu200888" target="_blank">
+                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
                                 </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/11" title="ktluxing"><em class="ofh">ktluxing</em> </a>
+                                <div class="goods-info">
+                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
 
-                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="ktluxing" data-followtype="5" data-userid="11">加关注</a></div>
+                                    <p>价格：￥<span>200</span></p>
+                                    <p>返利：<span>200</span>个集分宝</p>
+                                    <p>返利比例:<span>10.5%</span></p>
+                                </div>
                             </li>
 
-                            <li>
-                                <div class="user-pic">
-                                    <a href="/user/12" title="craven0571" target="_blank">
-                                        <img src="/u/default.jpg" width="50" height="50" alt="craven0571" title="craven0571"></a>
-                                </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/12" title="craven0571"><em class="ofh">craven0571</em> </a>
-
-                                    <p>来自淘宝</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="craven0571" data-followtype="5" data-userid="12">加关注</a></div>
-                            </li>
-
-                            <li>
-                                <div class="user-pic">
-                                    <a href="/user/13" title="piao-1984" target="_blank">
-                                        <img src="/images/user/default.jpg" width="50" height="50" alt="piao-1984" title="piao-1984"></a>
-                                </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/13" title="piao-1984"><em class="ofh">piao-1984</em> </a>
-
-                                    <p>来自食美特</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="piao-1984" data-followtype="5" data-userid="13">加关注</a></div>
-                            </li>
-
-                            <li>
-                                <div class="user-pic">
-                                    <a href="/user/14" title="qzuser" target="_blank">
-                                        <img src="http://qzapp.qlogo.cn/qzapp/111111/942FEA70050EEAFBD4DCE2C1FC775E56/50" width="50" height="50" alt="qzuser" title="qzuser"></a>
-                                </div>
-                                <div class="user-info">
-                                    <a class="username g-daren" href="/user/14" title="qzuser"><em class="ofh">qzuser</em> </a>
-
-                                    <p>来自腾讯QQ</p><a rel="follow" href="javascript:;" class="follow-btn" data-usernick="qzuser" data-followtype="5" data-userid="14">加关注</a></div>
-                            </li>
 
                         </ul>
                     </div>
