--- a/app/views/ugc/api/gotoTaobao.scala.html
+++ b/app/views/ugc/api/gotoTaobao.scala.html
@@ -44,13 +44,14 @@
         'pic':'',
         'price':'',
         'promotionPrice':'',
-        'commissionRate':''
+        'commissionRate':'',
+        'volume':''
     }
     TOP.api('rest','post',{
         method:'taobao.taobaoke.widget.items.convert',
         num_iids:'@numIid',
         outer_code:'@uid',
-        fields:'click_url,nick,title,item_location,pic_url,price,promotion_price,commission_rate'
+        fields:'click_url,nick,title,item_location,pic_url,price,promotion_price,commission_rate,volume'
     },function(resp){
         if(resp.error_response){
             alert('taobao.taobaoke.widget.items.convert接口获取商信息品失败!'+resp.error_response.msg);
@@ -68,6 +69,7 @@
                     ajaxData.price=respItem[0].price;
                     ajaxData.promotionPrice=respItem[0].promotion_price;
                     ajaxData.commissionRate=respItem[0].commission_rate;
+                    ajaxData.volume=respItem[0].volume;
                   /*  $("#J_clickUrl").attr("href",sellUrl)*/
                   //  document.getElementsByName('manual')[0].href=sellUrl;
                 }
