--- a/app/views/users/credits.scala.html
+++ b/app/views/users/credits.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],author:models.user.User,authorStatic:models.user.UserStatic,page:Page[(String,List[(java.sql.Timestamp,Long,Long,String,String,String,String,String,Int,Int,Int,String)])])
+@(user:Option[models.user.User],author:models.user.User,authorStatic:models.user.UserStatic,page:Page[(String,List[(java.sql.Timestamp,Long,Long,String,String,String,String,String,Int,Int,Int,String)])],orders:List[models.user.UserOrder],s:Int)
 @views.html.template(
 user,
 title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
@@ -25,12 +25,10 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 <div class="user-main">
                 <div class="main box-shadow plr15">
                     <div class="main-title clearfix">
-
                         <h2>
-                            最近30天浏览的宝贝
-
+                            @if(s == -1){  最近30天浏览的宝贝 }else{ <a href="@controllers.users.routes.Users.credits(author.id.get,-1,1)">最近30天浏览的宝贝 </a> }
                             <span class="ml5 mr5">|</span>
-                            <a href="">  返利成功的宝贝 </a>
+                            @if(s == 1){  成功返利的宝贝 }else{ <a href="@controllers.users.routes.Users.credits(author.id.get,1,1)">成功返利的宝贝 </a> }
                         </h2>
                     </div>
                     @for(items<-page.items){
@@ -44,12 +42,27 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 
                                         <div class="fd-baobei fd-media clearfix">
                                             <div class="pic">
-                                                <a href="#" target="_blank" title="@title">
-                                                    <img src='@(pic+"_120x120.jpg")' alt="@title" width="120">
+                                                @if(user.isEmpty){
+                                                <a rel="loginD2" data-numiid="@numIid" data-goodsid="0" data-rate="70" title="@title" target="_blank">
+                                                    <img src='@(pic+"_120x120.jpg")' width="80" height="80" alt="@title" title="@title">
                                                 </a>
+                                                }else{
+                                                <a href="@controllers.ugc.routes.API.gotoTaobao(numIid,0,70)" title="@title" target="_blank">
+                                                    <img src='@(pic+"_120x120.jpg")' width="80" height="80" alt="@title" title="@title">
+                                                </a>
+                                                }
+
                                             </div>
                                             <dl class="info">
-                                                <dt><h3 class="title ofh"> @title</h3></dt>
+                                                <dt>
+                                                <h3 class="title ofh">
+                                                @if(user.isEmpty){
+                                                <a rel="loginD2" data-numiid="@numIid" data-goodsid="0" data-rate="70" class="name ofh"  title="@title">@title </a>
+                                                }else{
+                                                <a class="name ofh" href="@controllers.ugc.routes.API.gotoTaobao(numIid,0,70)" title="@title">@title </a>
+                                                }
+                                            </h3>
+                                                </dt>
                                                 <dd class="clearfix">
                                                     <div class="price">
                                                         价格：
@@ -83,89 +96,60 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     }
 
                     <div class="clearfix pt20 pb20">
-                            <div class="pagin fr pagination" id="J_Pagination">
-                                <span class="current">1</span>
-                                <a href="">2</a>
-                                <a href="">3</a>
-                                <a href="">4</a>
-
-                                <a title="下一页" href="" class="next">下一页</a>
-                            </div>
+                        <div class="pagin fr pagination" id="J_Pagination">
+                            @if(page.nums.length>1){
+                            @page.prev.map { page =>
+                            <a class="prev" href="@controllers.users.routes.Users.credits(author.id.get,s,page)">上一页</a>
+                            }
+                            @for(num <-page.nums){
+                            @if(num==page.currentPage){
+                            <a class="current" href="#">@num</a>
+                            }else {
+                            <a href="@controllers.users.routes.Users.credits(author.id.get,s,num)">@num</a>
+                            }
+                            }
+                            @page.next.map { page =>
+                            <a class="next" href="@controllers.users.routes.Users.credits(author.id.get,s,page)">下一页</a>
+                            }
+                            }
                         </div>
+                    </div>
 
                 </div>
               </div>
 
                 <div class="user-side">
                     <div class="interest box-shadow plr15 ss">
-                        <div class="title">浏览最多的宝贝 </div>
+                        <div class="title">最新浏览的宝贝 </div>
                         <ul class="interGoods" id="J_InterGoods">
-
+                            @for(item<-orders){
                             <li>
                                 <div class="goods-pic">
-                                    <a href="/user/3" title="duanyu200888" target="_blank">
-                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
+                                    @if(user.isEmpty){
+                                    <a rel="loginD2" data-numiid="@item.numIid" data-goodsid="0" data-rate="70" title="@item.title" target="_blank">
+                                        <img src='@(item.pic+"_80x80.jpg")' width="80" height="80" alt="@item.title" title="@item.title">
+                                    </a>
+                                    }else{
+                                    <a href="@controllers.ugc.routes.API.gotoTaobao(item.numIid,0,70)" title="@item.title" target="_blank">
+                                        <img src='@(item.pic+"_80x80.jpg")' width="80" height="80" alt="@item.title" title="@item.title">
+                                    </a>
+                                    }
+
                                 </div>
                                 <div class="goods-info">
-                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
+                                    @if(user.isEmpty){
+                                    <a rel="loginD2" data-numiid="@item.numIid" data-goodsid="0" data-rate="70" class="name ofh"  title="@item.title">@item.title </a>
+                                    }else{
+                                    <a class="name ofh" href="@controllers.ugc.routes.API.gotoTaobao(item.numIid,0,70)" title="@item.title">@item.title </a>
+                                    }
 
-                                    <p>价格：￥<span>200</span></p>
-                                    <p>返利：<span>200</span>个集分宝</p>
-                                    <p>返利比例:<span>10.5%</span></p>
+                                    <p>价格：￥<span>@item.price</span></p>
+                                    <p>返利：<span>@item.credits</span>个集分宝</p>
+                                    <p>返利比例:<span>@(item.withdrawRate/100.0)%</span></p>
                                 </div>
                             </li>
-                            <li>
-                                <div class="goods-pic">
-                                    <a href="/user/3" title="duanyu200888" target="_blank">
-                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
-                                </div>
-                                <div class="goods-info">
-                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
+                            }
 
-                                    <p>价格：￥<span>200</span></p>
-                                    <p>返利：<span>200</span>个集分宝</p>
-                                    <p>返利比例:<span>10.5%</span></p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="goods-pic">
-                                    <a href="/user/3" title="duanyu200888" target="_blank">
-                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
-                                </div>
-                                <div class="goods-info">
-                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
-
-                                    <p>价格：￥<span>200</span></p>
-                                    <p>返利：<span>200</span>个集分宝</p>
-                                    <p>返利比例:<span>10.5%</span></p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="goods-pic">
-                                    <a href="/user/3" title="duanyu200888" target="_blank">
-                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
-                                </div>
-                                <div class="goods-info">
-                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
-
-                                    <p>价格：￥<span>200</span></p>
-                                    <p>返利：<span>200</span>个集分宝</p>
-                                    <p>返利比例:<span>10.5%</span></p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="goods-pic">
-                                    <a href="/user/3" title="duanyu200888" target="_blank">
-                                        <img src="/images/user/default.jpg" width="80" height="80" alt="duanyu200888" title="duanyu200888"></a>
-                                </div>
-                                <div class="goods-info">
-                                    <a class="name ofh" href="/user/3" title="duanyu200888">玻璃台灯创意 宜家北欧式透明布罩 卧室床头客厅简约书房装饰台灯 </a>
-
-                                    <p>价格：￥<span>200</span></p>
-                                    <p>返利：<span>200</span>个集分宝</p>
-                                    <p>返利比例:<span>10.5%</span></p>
-                                </div>
-                            </li>
 
 
                         </ul>
