--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -900,10 +900,22 @@ input:-moz-placeholder { font-size:12px; }
 #loginDialog .bd { padding:20px 0; }
 #loginDialog .bd .bd-l { float:left;width:330px;padding:10px 0 0 0;border-right:1px dotted #cdcdcd; }
 #loginDialog .bd .bd-r { float:right;width:251px;padding:10px 0 0 0; }
-#loginDialog .bd .bd-l .noaccount { margin:0 30px;line-height:18px;padding:16px 0 16px 40px;color:#666;border-top:1px dotted #cdcdcd; }
+#loginDialog .bd .noaccount,#loginDialog .nofanli {
+    text-align: center;
+    margin: 10px 30px 0 30px;
+    line-height: 18px;
+    padding: 10px 0 0 10px;
+    color: #666;
+    border-top: 1px dotted #cdcdcd;
+}
 #loginDialog .bd .bd-r .outlogin-b li { margin-bottom:20px; }
 #loginDialog .bd .bd-r .outlogin-s li { margin-bottom:8px; }
 #loginDialog .bd .act-row { margin-bottom:0; }
+
+#loginDialog .nofanli a:hover,#loginDialog .noaccount a:hover{
+    color: #ff7f00;
+    text-decoration: underline;
+}
 /* 第三方登录设置基本信息浮层 */
 .set-box { width:360px;margin:0 auto; }
 .set-box .title-info { padding:40px 0 20px 0;border-bottom:1px dotted #cdcdcd; }
