--- a/app/views/search/convertProduct.scala.html
+++ b/app/views/search/convertProduct.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User])
+@(user:Option[models.user.User],numIid:Long,id:Long)
 @views.html.template(
 user,
 title ="食美特，爱美食爱生活"
