--- a/app/views/ugc/api/gotoTaobao.scala.html
+++ b/app/views/ugc/api/gotoTaobao.scala.html
@@ -1,4 +1,4 @@
-@(numIid:Long,uid:Long,goodsId:Long,rate:Int)
+@(numIid:Long,uid:Long,goodsId:Long,rate:Int,detailUrl:String)
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,7 +24,7 @@
         <div class="hd"><h3>正在跳转，请稍等...</h3></div>
         <div class="bd clearfix">
             <p class="loading-bar"></p>
-        <!--    <p align="center"><a name="J_clickUrl" href="">请点这里</a> 直接跳转</p>-->
+            <p align="center"><a id="J_clickUrl" class="manual" href="@detailUrl">请点这里</a> 直接跳转</p>
         </div>
     </div>
 </div>
@@ -32,7 +32,7 @@
 
 <script type="text/javascript">
 
-    var sellUrl="";
+    var sellUrl="@detailUrl";
     var ajaxData={
         'uid':'@uid',
         'goodsId':'@goodsId',
@@ -62,6 +62,7 @@
                 var respItem=resp.taobaoke_items.taobaoke_item;
                 if (respItem.length > 0) {
                     sellUrl = respItem[0].click_url;
+                    alert(sellUrl)
                     ajaxData.nick=respItem[0].nick;
                     ajaxData.title=respItem[0].title;
                     ajaxData.location=respItem[0].item_location;
@@ -70,13 +71,14 @@
                     ajaxData.promotionPrice=respItem[0].promotion_price;
                     ajaxData.commissionRate=respItem[0].commission_rate;
                     ajaxData.volume=respItem[0].volume;
-                  /*  $("#J_clickUrl").attr("href",sellUrl)*/
-                  //  document.getElementsByName('manual')[0].href=sellUrl;
+                  //  $("#J_clickUrl").attr("href",sellUrl)
+
+              //     document.getElementsByName('manual')[0].href=sellUrl;
                 }
             }
         }
 
-        count();
+    //    count();
     })
     function count() {
         $.ajax({
@@ -88,12 +90,15 @@
             success: function(data){
                if(data.code=="100"){
                 //  alert(sellUrl)
-                   window.location = sellUrl;
+               //  window.location = sellUrl;
                }
+            },
+            error:function(){
+              //  window.location = sellUrl;
             }
         });
 
-      //  window.location = sellUrl;
+      window.location = sellUrl;
     }
 
 
