--- a/app/views/utils/global/error.scala.html
+++ b/app/views/utils/global/error.scala.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <meta charset="utf-8"/>
+    <title>食美特 爱美食爱生活</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.ico">
+    <link rel="stylesheet" href="/assets/css/error.css?v=2013040417">
 </head>
-<body>
-When an exception occurs in your application, the onError operation will be called
+<body id="J_page">
+          <div class="container">
+              <div class="error">
+                <div class="title">
+                    <a class="logo fl">食美特 </a><span class="intro fl"> - 404</span>
+                </div>
+                  <dl class="content r5">
+                      <dt>
+                          <h3>您访问的页面不存在了...</h3>
+                          <p>链接是否正确？宝贝、主题、话题、用户是否存在？</p>
+                      </dt>
+                      <dd>
+                          <p>
+                              <a href="/" class="">返回首页</a>
+                              <span>或者</span>
+                              <a href="javascript:history.go(-1);" class="">返回上页</a>
+                          </p>
+                      </dd>
+                  </dl>
+              </div>
+          </div>
 </body>
 </html>
